add_executable(check_endian check_endian.cc)

add_executable(backlog_parameter backlog_parameter.cc)

add_executable(accept_connection accept_connection.cc)

add_executable(tcp_send tcp_send.cc)

add_executable(tcp_recv tcp_recv.cc)

add_executable(tcp_send_buffer_size tcp_send_buffer_size.cc)

add_executable(tcp_recv_buffer_size tcp_recv_buffer_size.cc)

add_executable(check_time check_time.cc)

add_executable(cgi_server cgi_server.cc)